macro/src/deriver/snapshots/cli_compose_macro__deriver__arg_opt__tests__empty.snap
---
source: macro/src/deriver/arg_opt.rs
assertion_line: 135
expression: "test_arg_opt_deriver(quote! {})"
---
Err(
    Error(
        "unexpected end of input, expected one of: `struct`, `enum`, `union`",
    ),
)
