macro/src/deriver/snapshots/cli_compose_macro__deriver__arg_opt__tests__empty_enum.snap
---
source: macro/src/deriver/arg_opt.rs
assertion_line: 146
expression: "test_derive_arg_opt(quote! { enum Foo {} }).unwrap()"
---
impl cli_compose::schema::AsArgOpt for Foo {
    fn flag() -> cli_compose::schema::Flag {
        cli_compose::schema::Flag::LongOnly("foo".to_owned())
    }
    fn description() -> String {
        "".to_owned()
    }
    fn parse(s: &str) -> Option<Self> {
        <Foo as std::str::FromStr>::from_str(s).ok()
    }
}

