macro/src/deriver/snapshots/cli_compose_macro__deriver__arg_opt__tests__struct_with_multiple_fields.snap
---
source: macro/src/deriver/arg_opt.rs
assertion_line: 155
expression: "test_arg_opt_deriver(quote! { struct Foo(String, i32) ; })"
---
Err(
    Error(
        "#[derive(ArgOpt)] can only be applied to structs with single unnamed field or enums",
    ),
)
