macro/src/deriver/snapshots/cli_compose_macro__deriver__arg_opt__tests__struct_without_field.snap
---
source: macro/src/deriver/arg_opt.rs
assertion_line: 140
expression: "test_arg_opt_deriver(quote! { struct Foo ; })"
---
Err(
    Error(
        "#[derive(ArgOpt)] can only be applied to structs with single unnamed field or enums",
    ),
)
